--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Ignore Gradle project-specific cache directory
 .gradle
+gradle.properties
 
 # Ignore Gradle build output directory
 build
 /.idea/
 /out/
+/src/main/resources/secrets/secrets.yaml
